Improve targets/tasks
- Consolidate targets into single target
- Add inputs file to invalidate builds when csproj metadata changes

--- a/Resizetizer.NT/Resizetizer.NT.targets
+++ b/Resizetizer.NT/Resizetizer.NT.targets
@@ -6,8 +6,8 @@
 	</ItemGroup>
 
 	<UsingTask
-      AssemblyFile="Resizetizer.NT.dll"
-      TaskName="Resizetizer.ResizetizeSharedImages" />
+		AssemblyFile="Resizetizer.NT.dll"
+		TaskName="Resizetizer.ResizetizeSharedImages" />
 
 	<PropertyGroup>
 		<CleanDependsOn>
@@ -19,20 +19,52 @@
 		<_ResizetizerIsiOS Condition="'$(TargetFrameworkIdentifier)'=='Xamarin.iOS' And ('$(OutputType)' != 'Library' OR '$(IsAppExtension)'=='True')">True</_ResizetizerIsiOS>
 		<_ResizetizerIsUWP Condition="'$(TargetPlatformIdentifier)'=='UAP' And '$(OutputType)' == 'AppContainerExe'">True</_ResizetizerIsUWP>
 
-		<ResizetizeCollectImagesBeforeTargets Condition="'$(_ResizetizerIsiOS)' == 'True'">
+		<_ResizetizerInputsFile>$(IntermediateOutputPath)resizetizer.inputs</_ResizetizerInputsFile>
+	</PropertyGroup>
+
+	<!-- iOS -->
+	<PropertyGroup Condition="'$(_ResizetizerIsiOS)' == 'True'">
+		<ResizetizerPlatformType>ios</ResizetizerPlatformType>
+
+		<ResizetizeCollectImagesBeforeTargets>
 			$(ResizetizeCollectImagesBeforeTargets);
 			_CollectBundleResources;
 		</ResizetizeCollectImagesBeforeTargets>
 
-		<ResizetizeCollectImagesAfterTargets Condition="'$(_ResizetizerIsAndroid)' == 'True'">
+		<ResizetizeAfterTargets>
+			$(ResizetizeAfterTargets);
+			ResizetizeCollectImages;
+		</ResizetizeAfterTargets>
+	</PropertyGroup>
+
+	<!-- Android -->
+	<PropertyGroup Condition="'$(_ResizetizerIsAndroid)' == 'True'">
+		<ResizetizerPlatformType>android</ResizetizerPlatformType>
+
+		<ResizetizeCollectImagesAfterTargets>
 			$(ResizetizeCollectImagesBeforeTargets);
 			ResolveProjectReferences;
 		</ResizetizeCollectImagesAfterTargets>
 
-		<!--<_CollectBundleResourcesDependsOn Condition="'$(_ResizetizerIsiOS)' == 'True'">
+		<ResizetizeAfterTargets>
+			$(ResizetizeAfterTargets);
 			ResizetizeCollectImages;
-			$(_CollectBundleResourcesDependsOn);
-		</_CollectBundleResourcesDependsOn>-->
+		</ResizetizeAfterTargets>
+	</PropertyGroup>
+
+	<!-- UWP -->
+	<PropertyGroup Condition="'$(_ResizetizerIsUWP)' == 'True'">
+		<ResizetizerPlatformType>uwp</ResizetizerPlatformType>
+
+		<ResizetizeDependsOnTargets>
+			$(ResizetizeDependsOnTargets);
+			ResizetizeCollectImages;
+		</ResizetizeDependsOnTargets>
+
+		<ResizetizeBeforeTargets>
+			$(ResizetizeBeforeTargets);
+			AssignTargetPaths;
+		</ResizetizeBeforeTargets>
 	</PropertyGroup>
 
 	<!-- Finds absolute paths to any SharedImage in this project -->
@@ -61,23 +93,35 @@
 				TaskParameter="TargetOutputs"
 				ItemName="SharedImage" />
 		</MSBuild>
+
+		<!-- Write out item spec and metadata to a file we can use as an inputs for the resize target -->
+		<!-- This allows us to invalidate the build based on not just input image files changing but project item metadata as well -->
+		<WriteLinesToFile
+			File="$(_ResizetizerInputsFile)"
+			Lines="@(SharedImage->'File=%(Identity);BaseSize=%(BaseSize)')"
+			Overwrite="true"
+			WriteOnlyWhenDifferent="true" />
+
 	</Target>
 
 
-	<Target Name="ResizetizeiOS"
-					Condition="'$(_ResizetizerIsiOS)' == 'True'"
-					Inputs="@(SharedImage)"
-					Outputs="$(IntermediateOutputPath)resizetizer.stamp"
-					AfterTargets="ResizetizeCollectImages">
+	<Target Name="ResizetizeImages"
+		Inputs="@(SharedImage);$(_ResizetizerInputsFile)"
+		Outputs="$(IntermediateOutputPath)resizetizer.stamp"
+		AfterTargets="$(ResizetizeAfterTargets)"
+		BeforeTargets="$(ResizetizeBeforeTargets)"
+		DependsOnTargets="$(ResizetizeDependsOnTargets)">
 
 		<!-- Where in obj/ to store these -->
 		<PropertyGroup>
 			<ResizetizerIntermediateOutputPath>$(IntermediateOutputPath)resizetizer\</ResizetizerIntermediateOutputPath>
 		</PropertyGroup>
 
+		<!-- Resize the images -->
 		<ResizetizeSharedImages
-			PlatformType="ios"
+			PlatformType="$(ResizetizerPlatformType)"
 			IntermediateOutputPath="$(ResizetizerIntermediateOutputPath)"
+			InputsFile="$(_ResizetizerInputsFile)"
 			SharedImages="@(SharedImage)">
 		</ResizetizeSharedImages>
 
@@ -86,7 +130,10 @@
 			<!-- Either from the task, or if the task was skipped (up to date), use the wildcard lookup -->
 			<_ResizetizerCollectedImages Condition="'@(CopiedResources)' != ''" Include="@(CopiedResources)" />
 			<_ResizetizerCollectedImages Condition="'@(CopiedResources)' == ''" Include="$(ResizetizerIntermediateOutputPath)**\*" />
+		</ItemGroup>
 
+		<!-- iOS -->
+		<ItemGroup Condition="'$(_ResizetizerIsiOS)' == 'True'">
 			<!-- Batch the collectd items into BundleResource which iOS expects -->
 			<_ResizetizerCollectedBundleResourceImages Include="@(_ResizetizerCollectedImages->'%(FullPath)')">
 				<LogicalName>%(_ResizetizerCollectedImages.Filename)%(_ResizetizerCollectedImages.Extension)</LogicalName>
@@ -95,104 +142,44 @@
 
 			<!-- iOS Expects images in this group -->
 			<BundleResource Include="@(_ResizetizerCollectedBundleResourceImages)" />
+
+			<FileWrites Include="@(_ResizetizerCollectedBundleResourceImages)" />
 		</ItemGroup>
 
+		<!-- iOS Only -->
 		<!-- If on Windows, using build host, copy the files over to build server host too -->
 		<CopyFilesToBuildServer
-			Condition="'$(IsMacEnabled)'=='true'"
+			Condition="'$(_ResizetizerIsiOS)' == 'True' And '$(IsMacEnabled)'=='true'"
 			SessionId="$(BuildSessionId)"
 			Files="@(_ResizetizerCollectedBundleResourceImages)" />
+
+		<!-- Android -->
+		<ItemGroup Condition="'$(_ResizetizerIsAndroid)' == 'True'">
+			<!-- If we had any images, add that obj/ folder as a resource directory -->
+			<LibraryResourceDirectories Condition="Exists ('$(ResizetizerIntermediateOutputPath)')" Include="$(ResizetizerIntermediateOutputPath)">
+				<StampFile>$(IntermediateOutputPath)resizetizer.stamp</StampFile>
+			</LibraryResourceDirectories>
+
+			<FileWrites Include="@(_ResizetizerCollectedImages)" />
+		</ItemGroup>
+
+		<!-- UWP -->
+		<ItemGroup Condition="'$(_ResizetizerIsUWP)' == 'True'">
+			<ContentWithTargetPath Include="@(_ResizetizerCollectedImages)">
+				<TargetPath>%(_ResizetizerCollectedImages.Filename)%(_ResizetizerCollectedImages.Extension)</TargetPath>
+			</ContentWithTargetPath>
+
+			<FileWrites Include="@(_ResizetizerCollectedImages)" />
+		</ItemGroup>
 
 		<!-- Touch/create our stamp file for outputs -->
 		<Touch Files="$(IntermediateOutputPath)resizetizer.stamp" AlwaysCreate="True" />
 
 		<!-- Include our images and stamp file as filewrites so they don't get rm'd -->
 		<ItemGroup>
-			<FileWrites Include="@(_ResizetizerCollectedBundleResourceImages)" />
 			<FileWrites Include="$(IntermediateOutputPath)resizetizer.stamp" />
 		</ItemGroup>
 			
-	</Target>
-
-
-	<!-- This should copy images into the app's obj/ area and include them as android resources -->
-	<Target Name="ResizetizeAndroid"
-		Condition="'$(_ResizetizerIsAndroid)' == 'True'"
-		Inputs="@(SharedImage)"
-		Outputs="$(IntermediateOutputPath)resizetizer.stamp"
-		AfterTargets="ResizetizeCollectImages">
-
-		<!-- Where in obj/ to store these -->
-		<PropertyGroup>
-			<ResizetizerIntermediateOutputPath>$(IntermediateOutputPath)resizetizer\</ResizetizerIntermediateOutputPath>
-		</PropertyGroup>
-
-		<ResizetizeSharedImages
-			PlatformType="android"
-			IntermediateOutputPath="$(ResizetizerIntermediateOutputPath)"
-			SharedImages="@(SharedImage)">
-			<!-- <Output TaskParameter="CopiedResources" ItemName="FileWrites" /> -->
-		</ResizetizeSharedImages>
-
-		<ItemGroup>
-			<!-- Get Images that were generated -->
-			<!-- Either from the task, or if the task was skipped (up to date), use the wildcard lookup -->
-			<_ResizetizerCollectedImages Condition="'@(CopiedResources)' != ''" Include="@(CopiedResources)" />
-			<_ResizetizerCollectedImages Condition="'@(CopiedResources)' == ''" Include="$(ResizetizerIntermediateOutputPath)**\*" />
-
-			<!-- If we had any images, add that obj/ folder as a resource directory -->
-			<LibraryResourceDirectories Condition="Exists ('$(ResizetizerIntermediateOutputPath)')" Include="$(ResizetizerIntermediateOutputPath)">
-				<StampFile>$(IntermediateOutputPath)resizetizer.stamp</StampFile>
-			</LibraryResourceDirectories>
-		</ItemGroup>
-
-		<Touch Files="$(IntermediateOutputPath)resizetizer.stamp" AlwaysCreate="True" />
-
-		<ItemGroup>
-			<FileWrites Include="@(_ResizetizerCollectedImages)" />
-			<FileWrites Include="$(IntermediateOutputPath)resizetizer.stamp" />
-		</ItemGroup>
-	</Target>
-
-	<Target Name="ResizetizeUWP"
-					Condition="'$(_ResizetizerIsUWP)' == 'True'"
-					Inputs="@(SharedImage)"
-					Outputs="$(IntermediateOutputPath)resizetizer.stamp"
-					DependsOnTargets="ResizetizeCollectImages"
-					BeforeTargets="AssignTargetPaths">
-
-		<!-- Where in obj/ to store these -->
-		<PropertyGroup>
-			<ResizetizerIntermediateOutputPath>$(IntermediateOutputPath)resizetizer\</ResizetizerIntermediateOutputPath>
-		</PropertyGroup>
-
-		<ResizetizeSharedImages
-			PlatformType="uwp"
-			IntermediateOutputPath="$(ResizetizerIntermediateOutputPath)"
-			SharedImages="@(SharedImage)">
-			<!-- <Output TaskParameter="CopiedResources" ItemName="FileWrites" /> -->
-		</ResizetizeSharedImages>
-
-		<ItemGroup>
-			<!-- Get Images that were generated -->
-			<!-- Either from the task, or if the task was skipped (up to date), use the wildcard lookup -->
-			<_ResizetizerCollectedImages Condition="'@(CopiedResources)' != ''" Include="@(CopiedResources)" />
-			<_ResizetizerCollectedImages Condition="'@(CopiedResources)' == ''" Include="$(ResizetizerIntermediateOutputPath)**\*" />
-
-			<ContentWithTargetPath Include="@(_ResizetizerCollectedImages)">
-				<TargetPath>%(_ResizetizerCollectedImages.Filename)%(_ResizetizerCollectedImages.Extension)</TargetPath>
-			</ContentWithTargetPath>
-		</ItemGroup>
-
-		<Touch Files="$(IntermediateOutputPath)resizetizer.stamp" AlwaysCreate="True" />
-
-		<ItemGroup>
-			<!-- If we had any images, add that obj/ folder as a resource directory -->
-			<FileWrites Include="@(_ResizetizerCollectedImages)" />
-
-			<FileWrites Include="$(IntermediateOutputPath)resizetizer.stamp" />
-		</ItemGroup>
-
 	</Target>
 
 	<Target Name="_CleanResizetizer">
