--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build Project
         run: dotnet build --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
       - name: NuGet Pack
-        run: dotnet pack --output ./artifacts -p:PackageVersion=$NUPKG_VER --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
+        run: dotnet pack --output ./artifacts -p:PackageVersion=$NUPKG_VER -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
       - name: Upload Artifacts
         uses: actions/upload-artifact@v1
         with:
