--- a/SampleApp/Directory.Build.props
+++ b/SampleApp/Directory.Build.props
@@ -3,4 +3,9 @@
     <RestoreNoCache>true</RestoreNoCache>
     <RestorePackagesPath>..\packages</RestorePackagesPath>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Resizetizer.NT" Version="0.1.0-preview9" />
+    <PackageReference Include="Xamarin.Forms" Version="4.5.0.396" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+  </ItemGroup>
 </Project>
