Initial tizen work...

--- a/Resizetizer.NT/Resizetizer.NT.targets
+++ b/Resizetizer.NT/Resizetizer.NT.targets
@@ -19,7 +19,8 @@
 		<_ResizetizerIsiOS Condition="'$(TargetFrameworkIdentifier)'=='Xamarin.iOS' And ('$(OutputType)' != 'Library' OR '$(IsAppExtension)'=='True')">True</_ResizetizerIsiOS>
 		<_ResizetizerIsUWP Condition="'$(TargetPlatformIdentifier)'=='UAP' And '$(OutputType)' == 'AppContainerExe'">True</_ResizetizerIsUWP>
 		<_ResizetizerIsWPF Condition="'$(IsApplication)' == 'True' And '$(NuGetRuntimeIdentifier)' == 'win' And '$(TargetPlatformIdentifier)'=='Windows'">True</_ResizetizerIsWPF>
-
+		<_ResizetizerIsTizen Condition="'$(TargetFrameworkIdentifer)'=='Tizen'">True</_ResizetizerIsTizen>
+		
 		<_ResizetizerInputsFile>$(IntermediateOutputPath)resizetizer.inputs</_ResizetizerInputsFile>
 	</PropertyGroup>
 
@@ -83,6 +84,20 @@
 		</ResizetizeBeforeTargets>
 	</PropertyGroup>
 
+	<!-- Tizen -->
+	<PropertyGroup Condition="'$(_ResizetizerIsTizen)' == 'True'">
+		<ResizetizerPlatformType>tizen</ResizetizerPlatformType>
+
+		<ResizetizeDependsOnTargets>
+			$(ResizetizeDependsOnTargets);
+			ResizetizeCollectImages;
+		</ResizetizeDependsOnTargets>
+
+		<ResizetizeBeforeTargets>
+			$(ResizetizeBeforeTargets);
+		</ResizetizeBeforeTargets>
+	</PropertyGroup>
+
 	<!-- Finds absolute paths to any SharedImage in this project -->
 	<!-- App head projects will invoke this target on their project references to collect images -->
 	<Target Name="GetSharedImages" Outputs="@(ExportedSharedImage)">
@@ -93,7 +108,7 @@
 
 	<!-- Collect images from referenced projects -->
 	<Target Name="ResizetizeCollectImages"
-		Condition="'$(_ResizetizerIsAndroid)' == 'True' Or '$(_ResizetizerIsiOS)' == 'True' Or '$(_ResizetizerIsUWP)' == 'True' Or '$(_ResizetizerIsWPF)' == 'True'"
+		Condition="'$(_ResizetizerIsAndroid)' == 'True' Or '$(_ResizetizerIsiOS)' == 'True' Or '$(_ResizetizerIsUWP)' == 'True' Or '$(_ResizetizerIsWPF)' == 'True' Or '$(_ResizetizerIsTizen)' == 'True'"
 		BeforeTargets="$(ResizetizeCollectImagesBeforeTargets)"
 		AfterTargets="$(ResizetizeCollectImagesAfterTargets)">
 
@@ -195,6 +210,13 @@
 				<Link>%(_ResizetizerCollectedImages.Filename)%(_ResizetizerCollectedImages.Extension)</Link>
 			</Resource>
 			<FileWrites Include="@(_ResizetizerCollectedImages)" />
+		</ItemGroup>
+		
+		<!-- Tizen -->
+		<ItemGroup Condition="'$(_ResizetizerIsTizen)' == 'True'">
+			<TizenTpkUserIncludeFiles Include="$(@_ResizetizerCollectedImages)">
+				<TizenTpkSubDir>res\content\%(_ResizetizerCollectedImages._ResizetizerDpiPath)\%(_ResizetizerCollectedImages.Filename)%(_ResizetizerCollectedImages.Extension)</TizenTpkSubDir>
+			</TizenTpkUserIncludeFiles>
 		</ItemGroup>
 
 		<!-- Touch/create our stamp file for outputs -->
