Include default image sizes for tizen

--- a/Resizetizer.NT/Resizetizer.NT.targets
+++ b/Resizetizer.NT/Resizetizer.NT.targets
@@ -216,6 +216,10 @@
 		<!-- Tizen -->
 		<ItemGroup Condition="'$(_ResizetizerIsTizen)' == 'True'">
 			<TizenTpkUserIncludeFiles Include="$(ResizetizerIntermediateOutputPath)\MDPI\*.png">
+				<TizenTpkSubDir>res\</TizenTpkSubDir>
+			</TizenTpkUserIncludeFiles>
+
+			<TizenTpkUserIncludeFiles Include="$(ResizetizerIntermediateOutputPath)\MDPI\*.png">
 				<TizenTpkSubDir>res\content\MDPI\</TizenTpkSubDir>
 			</TizenTpkUserIncludeFiles>
 			<TizenTpkUserIncludeFiles Include="$(ResizetizerIntermediateOutputPath)\HDPI\*.png">
