Initial work on supporting app icon generation

--- a/SampleApp/SampleApp/SampleApp.csproj
+++ b/SampleApp/SampleApp/SampleApp.csproj
@@ -14,5 +14,7 @@
     <SharedImage Include="camera.svg" BaseSize="44" />
     <SharedImage Include="camera2.svg" BaseSize="44" TintColor="#FF00FF00" />
     <SharedImage Include="loginbg.png" BaseSize="123,105" />
+
+    <SharedImage Include="appicon.svg" IsAppIcon="True" Foreground="appiconfg.svg" />
   </ItemGroup>
 </Project>
