--- a/SampleApp/SampleApp/SampleApp.csproj
+++ b/SampleApp/SampleApp/SampleApp.csproj
@@ -15,6 +15,6 @@
     <SharedImage Include="camera2.svg" BaseSize="44" TintColor="#FF00FF00" />
     <SharedImage Include="loginbg.png" BaseSize="123,105" />
 
-    <SharedImage Include="appicon.svg" IsAppIcon="true" Foreground="appiconfg.svg" ForegroundScale="0.65" />
+    <SharedImage Include="appicon.svg" IsAppIcon="true" ForegroundFile="appiconfg.svg" ForegroundScale="0.65" />
   </ItemGroup>
 </Project>
