--- a/SampleApp/Directory.Build.props
+++ b/SampleApp/Directory.Build.props
@@ -4,7 +4,7 @@
     <RestorePackagesPath>..\packages</RestorePackagesPath>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Resizetizer.NT" Version="0.1.0-preview10" />
+    <PackageReference Include="Resizetizer.NT" Version="0.99.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.396" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.2" />
   </ItemGroup>
