--- a/Resizetizer.NT.Tests/Resizetizer.NT.Tests.csproj
+++ b/Resizetizer.NT.Tests/Resizetizer.NT.Tests.csproj
@@ -18,11 +18,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="images\camera.png" CopyToOutputDirectory="PreserveNewest" />
-		<None Include="images\camera.svg" CopyToOutputDirectory="PreserveNewest" />
-		<None Include="images\camera_color.png" CopyToOutputDirectory="PreserveNewest" />
-		<None Include="images\camera_color.svg" CopyToOutputDirectory="PreserveNewest" />
-		<None Include="images\loginbg.png" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="images\*" CopyToOutputDirectory="PreserveNewest" />
 	</ItemGroup>
 
 </Project>
